# ROS2_CICD_practice

./: .dockerignore  Dockerfile
.github/workflows/: ros2_cicd.yml
src/ros2_cicd/: CMakeLists.txt  package.xml
src/ros2_cicd/include/ros2_cicd/: publisher_node.hpp
src/ros2_cicd/src/: publisher_node.cpp  publisher_node_main.cpp  publisher_test.cpp
